# evolving-agent-society

./: .env.example  .gitignore  Makefile  agent.md  langgraph.json  pyproject.toml  readme.md  specs.md  vision.md
.docker/: Dockerfile  docker-compose.yml
scripts/: run_local.py  test_graph.py
src/: main_graph.py  print_graph.py
src/core/: state.py
src/memory/: checkpointer.py
src/nodes/: __init__.py  end_node.py  evaluate.py  explore.py  select_agent.py  spawn_agent.py  update_culture.py
src/shared/: base_agent_config.py  llm.py
tests/: conftest.py
